fix(choice-group): TEHVEER-296 - Remove extra padding from last item

--- a/packages/components/src/components/form/check/check.module.scss
+++ b/packages/components/src/components/form/check/check.module.scss
@@ -71,6 +71,5 @@
 }
 
 .check__extra-content {
-  padding-bottom: 1rem;
   padding-left: 1.75rem;
 }
