--- a/packages/components/src/components/form/radio/radio.module.scss
+++ b/packages/components/src/components/form/radio/radio.module.scss
@@ -67,6 +67,5 @@
 }
 
 .radio__extra-content {
-  padding-bottom: 1rem;
   padding-left: 1.75rem;
 }
